all dark mode issue fixed

--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -146,4 +146,13 @@
     .css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon {
         color: white;
     }
+
+    .singleDriver .singleDriverContainer .top .left .item .details .name {
+        margin-bottom: 10px;
+        color: whitesmoke;
+    }
+
+    tbody, td, tfoot, th, thead, tr {
+        background-color: #222;
+    }
 }   
